# CyberZed

./: Cargo.toml  README.md  extension.toml
src/: cyberzed.rs
src/commands/: encoding.rs  hashing.rs
src/utils/: mod.rs  uuid_gen.rs  xor.rs
