[package]
name = "cyberzed"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
path = "src/cyberzed.rs"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
hex = "0.4.3"
md5 = "0.7.0"
sha2 = "0.10.8"
urlencoding = "2.1.3"
zed_extension_api = "0.1.0"

[dependencies.uuid]
version = "1.15.1"
features = [
    "v4",
]
